--- a/demos/viewer/index.html
+++ b/demos/viewer/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Viewer</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"
-        content="IE=edge">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-    <title>Viewer</title>
-    <link rel="stylesheet"
-        href="style.css">
-</head>
-
-<body>
-    <div id="pano"></div>
-    <script src="../../build/marzipano.js"></script>
-    <script src="index.js"
-        type="module"></script>
-</body>
-
+    <body>
+        <div id="pano"></div>
+        <script src="../../build/marzipano.js"></script>
+        <script src="index.js" type="module"></script>
+    </body>
 </html>
